# fastapi-sqlalchemy-di-template

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/api/controllers/customers/: customer_controller.py  job_controller.py
backend/domain/database/models/: customer_model.py  job_model.py
backend/domain/database/repositories/: base_repository.py  customer_repository.py  job_repository.py
backend/domain/dto/: customer_dto.py  job_dto.py
backend/domain/interfaces/repositories/: i_customer_repository.py  i_job_repository.py
backend/domain/interfaces/services/: i_customer_service.py  i_job_service.py
backend/domain/services/: customer_service.py  job_service.py
backend/infrastructure/database/: database_session_manager.py
backend/infrastructure/dto/: base_dto.py
backend/infrastructure/ioc/: ioc.py
backend/infrastructure/model/: base_model.py
backend/infrastructure/settings/: settings.py
